@@ -1,3 +1,7 @@
+2007-09-13	Thomas Hempel	<thomas@typo3-unleashed.net>
+
+	* Feature #4064: Navigation title in tree view
+	
 2007-09-11  Ingo Renner  <ingo@typo3.org>
 
 	* added romainian flag, fixes bug 6000
